try blocklisting legacy branch and see how we handle this

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 sudo: required
 dist: precise
 language: ruby
+# blocklist
+branches:
+  except:
+    - legacy
 
+install: true
 script:
   - bundler --version
   - echo hola
