--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ node_js:
   - '5'
   - '4'
 
-
+services:
+  - postgresql
+  
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
 
