--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,19 @@ matrix:
         - os: linux
           sudo: required
           dist: trusty
+          env: DIST=gce-trusty
         - os: linux
           sudo: false
           dist: trusty
+          env: DIST=ec2-trusty
         - os: linux
           sudo: required
           dist: precise
+          env: DIST=gce-precise
         - os: linux
           sudo: false
           dist: precise
+          env: DIST=docker-precise
 
 android:
   components:
