--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
-language: android
+language: node_js
+node_js:
+  - 6
+  - 7
 
 matrix:
     include:
-        - os: linux
-          sudo: required
+        - sudo: required
           dist: trusty
           env: DIST=gce-trusty
         - os: linux
@@ -19,17 +21,4 @@ matrix:
           dist: precise
           env: DIST=docker-precise
 
-android:
-  components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
-
-    # The BuildTools version used by your project
-    - build-tools-19.1.0
-    # The SDK version used to compile your project
-    - android-22
-
-script:
-  - echo hola
+script: echo hola
