--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ language: java
 jdk: oraclejdk9
 script:
   - java -version
+  - ./gradlew wrapper --gradle-version=4.4.1 --distribution-type=bin
   - gradle -v
