--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,21 @@
-language: generic
-env:
-    global:
-    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
-    - GCLOUD_SDK_PATH=$HOME/google-cloud-sdk
+language: python
+
 matrix:
     include:
-        - env: image=ec2
-          sudo: false
-        - env: image=gce
+        - os: linux
           sudo: required
-        - env: image=gce-deprecated
-          group: deprecated-2017Q4
+          python: 3.2
+          env: TOXENV=py32
+        - os: linux
           sudo: required
-install: true
-script:
-   - if [[ ! -d ${HOME}/google-cloud-sdk ]]; then curl https://dl.google.com/dl/cloudsdk/channels/rapid/install_google_cloud_sdk.bash | sed 's/zxvf/zxf/' | bash; fi
-notifications:
-    email: never
+          python: 3.3
+          env: TOXENV=py33
+        - os: osx
+          language: minimal
+          env: TOXENV=py32
+        - os: osx
+          language: minimal
+          env: TOXENV=py33
+install:
+    - ./travis/install.sh
+script: make test
