--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,9 @@
-language: python
+dist: trusty
+sudo: false
+language: php
+php: 5.5.9
 
-matrix:
-    include:
-        - os: linux
-          sudo: required
-          python: 3.2
-          env: TOXENV=py32
-        - os: linux
-          sudo: required
-          python: 3.3
-          env: TOXENV=py33
-        - os: osx
-          language: minimal
-          env: TOXENV=py32
-        - os: osx
-          language: minimal
-          env: TOXENV=py33
-install:
-    - ./travis/install.sh
-script: make test
+addons:
+    chrome: stable
+
+script: echo hola
