--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,12 @@
-language: python
+language: generic
 
 matrix:
     include:
         - os: linux
-          sudo: required
-          python: 3.2
-          env: TOXENV=py32
+          sudo: false
         - os: linux
           sudo: required
-          python: 3.3
-          env: TOXENV=py33
         - os: osx
-          language: minimal
-          env: TOXENV=py32
-        - os: osx
-          language: minimal
-          env: TOXENV=py33
-install:
-    - ./travis/install.sh
-script: make test
+
+install: true
+script: echo hola
